--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ layout: default
 <!-- index.html -->
 <div id="top-logo"></div>
 {% for block in site.blocks %}
-    <div class="dblock" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
+    <div class="dblock row-{{ block.title | slice: 1 }}" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
 {% endfor %}
