--- a/_blocks/b40.html
+++ b/_blocks/b40.html
@@ -1,5 +1,5 @@
 ---
 ---
 
-<img src="/assets/img/ez.jpg"><br>
-## Экспертное заключение
+<img src="/assets/img/ez.jpg">
+<h2>Экспертное заключение></h2>
