--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ layout: default
 <div id="top-logo"></div>
 <div style="grid-area:empty2"></div>
 {% for block in site.blocks %}
-    <div class="dblock row-{{ block.title | slice: 1 }}" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
+    <div class="dblock col-{{ block.title | slice: 1 }}" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
 {% endfor %}
