--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <!-- index.html -->
 <div style="grid-area:empty1"></div>
-<div id="top-logo"></div>
+<div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
 <div style="grid-area:empty2"></div>
 {% for block in site.blocks %}
     <div class="dblock col-{{ block.title | slice: 1 }}" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
