--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ layout: default
 <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
 <div style="grid-area:empty2"></div>
 {% for block in site.blocks %}
-    <div class="dblock col-{{ block.title | slice: 1 }}" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
+    <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}" id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
 {% endfor %}
