--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
             <a href="{{ link.url }}">{{ link.title }}</a>
         </li>
         {%- endfor -%}
-        <lint>тел:+7(903)777-77-77<br>email@vo.ru</li>
+        <li style="border-right: none;">тел:+7(903)777-77-77<br>email@vo.ru</li>
     </ul>
     
 
