--- a/survey.html
+++ b/survey.html
@@ -21,7 +21,7 @@ permalink: /survey
     <div style="grid-area:empty1"></div>
     <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
-    {% for block in site.blocks | where_exp: "page.pages", "page.pages contains  'survey' " %}
+    {% for block in site.blocks | where_exp: "block.pages", "block.pages contains  'survey' " %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
         id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
     {% endfor %}
