--- a/survey.html
+++ b/survey.html
@@ -21,7 +21,9 @@ permalink: /survey
     <div style="grid-area:empty1"></div>
     <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
-    {% assign page_blocks = site.blocks | where_exp: "item", "item.pages.size > 0 and item.pages contains 'survey'" %}
+    {% assign page_blocks = site.blocks | where_exp: "item", "item.pages contains 'survey'" %}
+    {% assign page_blocks_all = site.blocks | where: 'pages', nil}
+    {$ assign _blocks = page_blocks_all | concat: page_blocks }
     {% for block in page_blocks %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
         id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
