--- a/survey.html
+++ b/survey.html
@@ -24,7 +24,7 @@ permalink: /survey
     {% assign page_blocks = site.blocks | where_exp: "item", "item.pages contains 'survey'" %}
     {% assign page_blocks_all = site.blocks | where: 'pages', nil}
     {$ assign _blocks = page_blocks_all | concat: page_blocks }
-    {% for block in page_blocks %}
+    {% for block in _blocks %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
         id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
     {% endfor %}
