--- a/survey.html
+++ b/survey.html
@@ -24,6 +24,7 @@ permalink: /survey
     {% assign page_blocks = site.blocks | where_exp: "item", "item.pages contains 'survey'" %}
     {% assign page_blocks_all = site.blocks | where: 'pages', empty %}
     {% assign _blocks = page_blocks_all | concat: page_blocks %}
+    <!-- {{ page_blocks | size }} + {{ page_blocks_all | size }} = {{ _blocks | size }} -->
     {% for block in _blocks %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
         id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
