--- a/survey.html
+++ b/survey.html
@@ -22,7 +22,7 @@ permalink: /survey
     <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
     {% assign page_blocks = site.blocks | where_exp: "item", "item.pages contains 'survey'" %}
-    {% assign page_blocks_all = site.blocks | where: "pages", nil %}
+    {% assign page_blocks_all = site.blocks | where: "pages.size", 0 %}
     {% assign _blocks = page_blocks_all | concat: page_blocks %}
     <!-- {{ page_blocks | size }} + {{ page_blocks_all | size }} = {{ _blocks | size }} -->
     {% for block in _blocks %}
