--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@ layout: default
     <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
     {% assign page_blocks = site.blocks  %} <!-- | where_exp: "item", "item.pages contains 'index' or item.pages == nil" -->
-    
     {% for block in page_blocks %}
+    <!-- {{ block.title }}/{{ block.pages }} -->
+    {%if block.pages == nil or  block.pages contains "index" %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
         id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
+    {% endif %}
     {% endfor %}
 </div>
