--- a/survey.html
+++ b/survey.html
@@ -21,13 +21,12 @@ permalink: /survey
     <div style="grid-area:empty1"></div>
     <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
-    {% assign page_blocks = site.blocks | where_exp: "item", "item.pages contains 'survey'" %}
-    {% assign page_blocks_all = site.blocks | where_exp: "item", "item.pages == nil" %}
-    {% assign __blocks = page_blocks_all | concat: page_blocks  %}
-    <!-- {% assign _blocks = _b  %} -->
-    <!-- {{ page_blocks | size }} + {{ page_blocks_all | size }} = {{ _blocks | size }} -->
-    {% for block in _blocks %}
+    {% assign page_blocks = site.blocks %}    
+    {% for block in page_blockss %}
+    <!-- {{ block.title }}/{{ block.pages }} -->
+    {%if block.pages == nil or  block.pages contains "survey" %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
         id="{{ block.title | downcase }}">{{ block.content | markdownify }}</div>
+        {% endif %}
     {% endfor %}
 </div>
