--- a/survey.html
+++ b/survey.html
@@ -22,7 +22,7 @@ permalink: /survey
     <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
     {% assign page_blocks = site.blocks %}    
-    {% for block in page_blockss %}
+    {% for block in page_blocks %}
     <!-- {{ block.title }}/{{ block.pages }} -->
     {%if block.pages == nil or  block.pages contains "survey" %}
     <div class="dblock {{ block.css-class }} col-{{ block.title | slice: 1 }} row-{{ block.title | slice: 2 }}"
