--- a/buildinfo.html
+++ b/buildinfo.html
@@ -15,7 +15,7 @@ jekyll: {{ jekyll | jsonify  | newline_to_br | escape }}<hr>
 static_files: {{ site.static_files | jsonify | newline_to_br | escape }}<hr> -->
 <ul>
 {% for p in site.pages %}
-<li>{{p.place}} <a href="{{ p.url}}">{{ p.url}}</a> &ndash; {{ p.title }} </li>
+<li>{{ p.sortid }} <a href="{{ p.url}}">{{ p.url}}</a> &ndash; {{ p.title }} </li>
 {% endfor %}
 <hr/>
 {% for d in site.documents %}
