--- a/i.html
+++ b/i.html
@@ -1,7 +1,8 @@
 ﻿---
+permalink: "/index.json"
 layout: null
-permalink: /index.json
 ---
+
 {
 	"pages": {{ site.pages | jsonify }},
 	"documents": {{ site.documents | jsonify }},
