--- a/_blocks/b20.html
+++ b/_blocks/b20.html
@@ -3,5 +3,5 @@ title: B20
 css-class: storey-2
 ---
 
-<img src="/assets/img/altsur.jpg">
+<img src="/img/altsur.jpg">
 <h2>Высотное обследование<h2>
