--- a/_old/index.html
+++ b/_old/index.html
@@ -18,7 +18,7 @@ layout: default
 </nav>
 <div id="main-space">
     <div style="grid-area:empty1"></div>
-    <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
+    <div id="top-logo"><img src="/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
     {% assign page_blocks = site.blocks  %} <!-- | where_exp: "item", "item.pages contains 'index' or item.pages == nil" -->
     {% for block in page_blocks %}
