--- a/_old/survey.html
+++ b/_old/survey.html
@@ -19,7 +19,7 @@ permalink: /survey
 </nav>
 <div id="main-space">
     <div style="grid-area:empty1"></div>
-    <div id="top-logo"><img src="/assets/img/top_logo.jpg"></div>
+    <div id="top-logo"><img src="/img/top_logo.jpg"></div>
     <div style="grid-area:empty2"></div>
     {% assign page_blocks = site.blocks %}    
     {% for block in page_blocks %}
