--- a/buildinfo.html
+++ b/buildinfo.html
@@ -21,7 +21,8 @@ jekyll: {{ jekyll | jsonify }}<br/>
             <td>{{ p.sortid }}</td>
             <td>{{ p.title }}</td>
             <td><a href="{{ p.url}}?{{site.time | date: '%s' }}">{{ p.url}}</a></td>
-            <td>{{ p.layout }}</td>            
+            <td>{{ p.layout }}</td>
+            <td>{{ p.path }}</td>            
         </tr>
     {% endfor %}
 
