--- a/buildinfo.html
+++ b/buildinfo.html
@@ -1,8 +1,8 @@
 ---
 title: Информация по сборке
-permalink: "/_buildinfo"
 layout: default
 sitemap: false
+permalink: /_buildinfo
 ---
 
 build: {{ site.time }}<br/>
