--- a/buildinfo.html
+++ b/buildinfo.html
@@ -100,4 +100,11 @@ jekyll: {{ jekyll | jsonify }}<br/>
         <li>site.{{ var }} = {{ site[var] }}</li>            
         {% endunless %}        
     {% endfor%}
+    <hr>
+    {% for var in page %}
+    {% if p == "content" or p=="next" or p=="previous" %}{% continue %}{% endif %}
+        {% unless page[var].first %}
+        <li>page.{{ var }} = {{ page[var] }}</li>            
+        {% endunless %}        
+    {% endfor%}
 </ul>
