--- a/buildinfo.html
+++ b/buildinfo.html
@@ -2,7 +2,7 @@
 title: Информация по сборке
 layout: default
 sitemap: false
-permalink: /_buildinfo
+permalink: /_/buildinfo
 ---
 
 build: {{ site.time }}<br/>
