--- a/buildinfo.html
+++ b/buildinfo.html
@@ -9,7 +9,7 @@ build: {{ site.time }}<br/>
 jekyll: {{ jekyll | jsonify }}<br/>
 
 <h3>Pages:</h3>
-<table>
+<table >
     {% assign sort_pages = site.pages | sort: "sortid" %}
     {% for p in sort_pages %}
         <tr>
@@ -68,7 +68,7 @@ jekyll: {{ jekyll | jsonify }}<br/>
     <a href="{{ d.url}}?{{site.time | date: '%s' }}">{{ d.url}}</a>
     <details>
             <summary></summary>
-            <table>
+            <table class="uk-table uk-table-striped uk-table-hover">
                 {% for p in d %}
                 {% if p == "content" or p == "output" or p=="next" or p=="previous" or p=="excerpt" %}{% continue %}{% endif %}
                     <tr><td>{{ p }}</td><td>{{ d[p] }}</td></tr>
