--- a/buildinfo.html
+++ b/buildinfo.html
@@ -9,8 +9,8 @@ build: {{ site.time }}<br/>
 jekyll: {{ jekyll | jsonify }}<br/>
 
 <h3>Pages:</h3>
-<table >
-    {% assign sort_pages = site.pages | sort: "sortid" %}
+<table class="uk-table uk-table-striped uk-table-hover uk-table-small">
+    {% assign sort_pages = site.pages | sort: "cat" | sort: "sortid" %}
     {% for p in sort_pages %}
         <tr>
             <td>
@@ -68,7 +68,7 @@ jekyll: {{ jekyll | jsonify }}<br/>
     <a href="{{ d.url}}?{{site.time | date: '%s' }}">{{ d.url}}</a>
     <details>
             <summary></summary>
-            <table class="uk-table uk-table-striped uk-table-hover">
+            <table class="uk-table uk-table-striped uk-table-hover uk-table-small">
                 {% for p in d %}
                 {% if p == "content" or p == "output" or p=="next" or p=="previous" or p=="excerpt" %}{% continue %}{% endif %}
                     <tr><td>{{ p }}</td><td>{{ d[p] }}</td></tr>
