--- a/buildinfo.html
+++ b/buildinfo.html
@@ -11,7 +11,7 @@ jekyll: {{ jekyll | jsonify }}<br/>
 <h3>Pages:</h3>
 <table class="uk-table uk-table-striped uk-table-hover uk-table-small">
     <tr>
-        <th>cat, main, submenu</td>
+        <th></td>
         <th>sortid</th>
         <th>title</th>
         <th>url</th>
@@ -22,13 +22,13 @@ jekyll: {{ jekyll | jsonify }}<br/>
     {% for p in sort_pages %}
         <tr>
             <td>
-                <span title="cat (категория)"></span>{{ p.cat }}</span>
+                <span title="cat (категория)">{{ p.cat }}</span>
                 {% if p.main %}<span title="main (главное меню)">☑</span>
-                    {% if p.submenu %}<span title="submenu (подменю)">🍔</span> {% endif %}
+                    {% if p.submenu %}<span title="submenu (подменю)">🍔</span>{% endif %}
                 {% endif %}
             </td>
             <td><span title="sortid (сортировка для меню)">{{ p.sortid }}</span>{%- if p.sitemap != false -%}{%- else -%}<span title="sitemap (удалено из поиска)">👻</span>{%- endif -%}</td>
-            <td>{{ p.title }}</td>
+            <td><span title="{% for v in p %}{% if v[0] == "content" or v[0] == "excerpt" %}{% continue %}{% endif %}p.{{ v[0] }} = {{ v[1] }}; {% endfor %}">{{ p.title }}</span></td>
             <td><a href="{{ p.url}}?{{site.time | date: '%s' }}">{{ p.url}}</a></td>
             <td>{{ p.layout }}</td>
             <td>{{ p.path }}</td>            
